--- a/src/css/style.css
+++ b/src/css/style.css
@@ -266,20 +266,19 @@ header .navbar ul li a:hover {
 }
 
 .skillBox {
-  transform : scale(1.5,1.5); 
   color: white;
   display: flex;
   flex-direction: column;
   overflow: hidden;
   padding: 10px;
   border-radius: 2px;
-  width: 300px;
+  width: 500px;
   height: fit-content;
   margin: 20px;
 }
 
 .skillBox .title {
-  font-size: 200%;
+  font-size: 3rem;
   justify-content: center;
 }
 
@@ -288,6 +287,7 @@ header .navbar ul li a:hover {
 }
 
 .skillBox .infos p {
+  font-size: 2rem;
   padding: 5px 5px 5px 5px;
 }
 
@@ -299,7 +299,7 @@ header .navbar ul li a:hover {
 .skillBar {
   white-space: nowrap;
   text-overflow: ellipsis;
-  width: 190px;
+  width: 300px;
   margin-left: 5px;
   margin-left: auto;
   margin-right: 10px;
