--- a/src/css/style.css
+++ b/src/css/style.css
@@ -394,6 +394,11 @@ header .navbar ul li a:hover {
     width: 100%;
 }
 
+.infobox {
+    display: flex;
+    justify-content: space-between;
+}
+
 .skillBox {
     color: white;
     display: flex;
@@ -430,6 +435,7 @@ header .navbar ul li a:hover {
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 300px;
+    min-height: 20px;
     margin-left: 5px;
     margin-left: auto;
     margin-right: 10px;
@@ -703,6 +709,25 @@ header .navbar ul li a:hover {
     }
     .contact .row form {
         margin: 3rem 0;
+    }
+}
+
+@media (max-width: 550px) {
+    .infobox {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    .skillBox .title {
+        font-size: 3rem;
+        justify-content: center;
+        margin-bottom: 10px;
+        ;
+    }
+    .skillBar {
+        margin-bottom: 5px;
     }
 }
 
