--- a/src/css/style.css
+++ b/src/css/style.css
@@ -456,7 +456,7 @@ header .navbar ul li a:hover {
 }
 
 .education .box-container .box {
-    width: 50rem;
+    width: 45rem;
     margin: 4rem 1rem;
     padding-left: 4rem;
     border-left: 0.2rem solid #fff;
@@ -484,7 +484,7 @@ header .navbar ul li a:hover {
 }
 
 .education .box-container .box p {
-    font-size: 1.9rem;
+    font-size: 1.5rem;
     color: #eee;
     padding: 1rem 0;
     text-align: justify;
@@ -502,6 +502,14 @@ header .navbar ul li a:hover {
     font-size: 2rem;
     color: #fff;
     background: var(--yellow);
+}
+
+.education h2 {
+    text-align: center;
+    font-size: 3.5rem;
+    color: var(--yellow);
+    padding: 1rem 0;
+    font-weight: normal;
 }
 
 
@@ -606,10 +614,6 @@ header .navbar ul li a:hover {
     width: 100%;
 }
 
-.contact .row form .box::placeholder {
-    text-transform: capitalize;
-}
-
 .contact .row form .message {
     height: 15rem;
     resize: none;
@@ -639,6 +643,13 @@ header .navbar ul li a:hover {
 .contact .row .content .info h3 i {
     padding-right: 1rem;
     color: var(--yellow);
+}
+
+.contact .info {
+    font-size: 1.5rem;
+    color: var(--yellow);
+    padding: 1rem 0;
+    font-weight: normal;
 }
 
 
